fix to social icon alignment

--- a/static/css/partials/_site-footer.scss
+++ b/static/css/partials/_site-footer.scss
@@ -108,7 +108,8 @@
     .footer-social {
         height: 35px;
         display: flex;
-        justify-content: right;
+        display: -webkit-flex;
+        justify-content: flex-end;
         padding: 0px;
 
         > .social-icon {
